# skyforge

./: .gitignore  CLAUDE.md  README.md  ingest_videos.sh  manifest.json  pyproject.toml
05_TELEMETRY/: PTSC_0008.json  PTSC_0009_0001.json  PTSC_0009_0002.csv  PTSC_0009_0002.gpx  PTSC_0009_0002.json
flightdeck_contrib/: INTEGRATION_GUIDE.md  __init__.py
flightdeck_contrib/ingestion/: __init__.py  media_enhancements.py
flightdeck_contrib/migrations/: add_quality_metrics.sql
flightdeck_contrib/processing/: __init__.py  deliverable_exporter.py  quality_analyzer.py  segment_scorer.py
flightdeck_contrib/schemas/: __init__.py  quality.py
flights/1st Flight/: project.json
flights/1st Flight/03_ANALYSIS/: master_selects.json  selects_IMG_0167_norm.json  selects_IMG_0168_norm.json  selects_IMG_0169_norm.json  selects_IMG_0170_norm.json  selects_IMG_0171_norm.json  selects_IMG_0173_norm.json  selects_IMG_0174_norm.json  selects_IMG_0175_norm.json  selects_IMG_0176_norm.json  selects_IMG_0177_norm.json  selects_IMG_0178_norm.json  selects_IMG_0179_norm.json  selects_IMG_0180_norm.json  selects_PTSC_0008_norm.json  selects_PTSC_0009_0001_norm.json  selects_PTSC_0009_0002_norm.json
flights/1st Flight/03_ANALYSIS/IMG_0167_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/IMG_0168_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/IMG_0169_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/IMG_0170_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/IMG_0171_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/IMG_0173_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/IMG_0174_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/IMG_0175_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/IMG_0176_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/IMG_0177_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/IMG_0178_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/IMG_0179_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/IMG_0180_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/PTSC_0008_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/PTSC_0009_0001_norm/: analysis.json  ffprobe.json
flights/1st Flight/03_ANALYSIS/PTSC_0009_0002_norm/: analysis.json  ffprobe.json
flights/1st Flight/05_TELEMETRY/: PTSC_0008.csv  PTSC_0008.gpx  PTSC_0008.kml  PTSC_0009_0001.csv  PTSC_0009_0001.gpx  PTSC_0009_0001.kml  PTSC_0009_0002.kml
flights/2nd Flight/: manifest.json  project.json
flights/2nd Flight/03_ANALYSIS/: master_selects.json  selects_PTSC_0010_0001_norm.json  selects_PTSC_0010_0002_norm.json  selects_PTSC_0011_norm.json  selects_PTSC_0018_norm.json  selects_PTSC_0019_norm.json
flights/2nd Flight/05_TELEMETRY/: PTSC_0010_0001.json  PTSC_0010_0001.kml  PTSC_0010_0002.json  PTSC_0010_0002.kml  PTSC_0011.json  PTSC_0011.kml  PTSC_0018.json  PTSC_0018.kml  PTSC_0019.json  PTSC_0019.kml
flights/2nd Flight/ATOM_001/DCIM/: PTSC_0010_0001.SRT  (+4 more)
src/skyforge/: __init__.py  cli.py  client.py  config.py
src/skyforge/commands/: analyze.py  auth.py  detect.py  export.py  flights.py  ingest.py  init.py  process.py  status.py  telemetry.py  transcode.py  vision.py
src/skyforge/core/: analyzer.py  detector.py  exporter.py  geo.py  media.py  pipeline.py  project.py  reporter.py  selector.py  telemetry.py  transcoder.py  vision.py
(+10 files in other folders)
