[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyforge"
version = "0.1.0"
description = "CLI tool for AI Aerial Solutions — manage aerial footage, process with AI/ML, and track flight data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AI Aerial Solutions" }]
keywords = ["drone", "aerial", "cli", "ai", "video-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "scenedetect[opencv]>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7",
]
ai = [
    "opencv-python>=4.9",
    "pillow>=10.0",
]

[project.scripts]
skyforge = "skyforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skyforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.coverage.run]
source = ["skyforge"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
